--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Hotel Paraíso</title>
+
     <link rel="stylesheet" href="css/all.css">
-    
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
-    
+    <header>
+        <a href="#"><img src="img/logo.png" alt="Hotel Paraíso"></a>
+
+        <nav>
+            <li><a href="" target="_self">Home</a></li>
+            <li><a href="" target="_self" rel="noopener noreferrer">Sobre</a></li>
+            <li><a href="" target="_self" rel="noopener noreferrer">Reservas</a></li>
+            <li><a href="" target="_self" rel="noopener noreferrer">Contato</a></li>
+        </nav>
+
+    </header>
 </body>
+
 </html>
