--- a/index.html
+++ b/index.html
@@ -24,6 +24,28 @@
         </nav>
 
     </header>
+
+    <section class="hero">
+        <h1>Conheça este paraíso chamado Itacaré.</h1>
+        <h3>"Aconcego, conforto, sinpatia e alto astral"</h3>
+        <a href="#" class="btn">Saiba Mais</a>
+    </section>
+
+    <section class="conheça-o-hotel">
+        <h3>Conheça o Hotel Paraíso</h3>
+        <p>Feche os olhos e imagine o paraíso. Um lugar no meio da Mata Atlântica e banhado pelo mar,
+        onde você encontra paz, tranquilidade, conforto e comodidade.
+        </p>
+        <hr>
+        <ul class="grid">
+            <li class="small" style="background-image: url('img/itacare-01.jpg');"></li>
+            <li class="large" style="background-image: url('img/itacare-02.jpg');"></li>
+            <li class="large" style="background-image: url('img/itacare-03.jpg');"></li>
+            <li class="small" style="background-image: url('img/itacare-04.jpg');"></li>
+
+        </ul>
+    </section>
+
 </body>
 
 </html>
