--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Paraíso</title>
+
     <link rel="stylesheet" href="css/responsive.css">
+
     <link rel="stylesheet" href="css/all.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
+
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 
 </head>
@@ -27,15 +32,15 @@
     </header>
 
     <section class="hero">
-        <h1>Conheça este paraíso chamado Itacaré.</h1>
-        <h3>"Aconcego, conforto, sinpatia e alto astral"</h3>
+        <h1>conheca este paraíso chamado Itacaré.</h1>
+        <h3>"Aconchego, conforto, sinpatia e alto astral"</h3>
         <a href="#" class="btn">Saiba Mais</a>
     </section>
 
-    <section class="conheça-o-hotel">
-        <h3>Conheça o Hotel Paraíso</h3>
+    <section class="conheca-o-hotel">
+        <h3>conheca o Hotel Paraíso</h3>
         <p>Feche os olhos e imagine o paraíso. Um lugar no meio da Mata Atlântica e banhado pelo mar,
-        onde você encontra paz, tranquilidade, conforto e comodidade.
+            onde você encontra paz, tranquilidade, conforto e comodidade.
         </p>
         <hr>
         <ul class="grid">
@@ -44,6 +49,28 @@
             <li class="large" style="background-image: url('img/itacare-03.jpg');"></li>
             <li class="small" style="background-image: url('img/itacare-04.jpg');"></li>
 
+        </ul>
+    </section>
+
+    <section class="caracteristicas">
+        <h3>Único hotel pé na areia de Itacaré</h3>
+        <p>Implantado em uma área completamente arborizada, o Hotel Paraíso é o único hotel pé na areia de Itacaré. Aqui
+            o Mar será o seu companheiro, e você terá as belezas da natureza como guia.
+        </p>
+        <hr>
+        <ul class="grid">
+            <li>
+                <i class="fas fa-location-arrow"></i>
+                <h4>Localização</h4>
+                <p>Localizada no sul da Bahia, entre o mar e a Mata Atlantica, Itacaré tem refrescantes cachoeiras e
+                    praias belíssimas, muitas delas tão pequenas que nem aparecem nos mapas.</p>
+            </li>
+            <li>
+                <i class="fas fa-gift"></i>
+                <h4>
+
+                </h4>
+            </li>
         </ul>
     </section>
 
