--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <section class="conheca-o-hotel">
-        <h3>conheca o Hotel Paraíso</h3>
+        <h3>Conheca o Hotel Paraíso</h3>
         <p>Feche os olhos e imagine o paraíso. Um lugar no meio da Mata Atlântica e banhado pelo mar,
             onde você encontra paz, tranquilidade, conforto e comodidade.
         </p>
