--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Paraíso</title>
 
-    <link rel="stylesheet" href="css/responsive.css">
-
-    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -57,7 +55,9 @@
         <p>Implantado em uma área completamente arborizada, o Hotel Paraíso é o único hotel pé na areia de Itacaré. Aqui
             o Mar será o seu companheiro, e você terá as belezas da natureza como guia.
         </p>
+
         <hr>
+
         <ul class="grid">
             <li>
                 <i class="fas fa-location-arrow"></i>
@@ -67,9 +67,16 @@
             </li>
             <li>
                 <i class="fas fa-gift"></i>
-                <h4>
+                <h4>Pacote de Ofertas</h4>
+                <p>Sabe aquele descontraído encontro coma família e amigos? Ou um momento relax? Nossa estrutura conta
+                    com uma diversiade de espaços que proporcionam momentos inesquecíveis.</p>
+            </li>
 
-                </h4>
+            <li>
+                <i class="fas fa-home"></i>
+                <h4>Acomodações</h4>
+                <p>Hotel Paraíso possui 29 unidade, divididas entre 11 chalés, 16 amplas suítes e 2 chalés familiares,
+                    todas com TV a cabo, frigobar, além de varanda com rede.</p>
             </li>
         </ul>
     </section>
