--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
         </ul>
     </section>
 
+    <section class="newsletter">
+        <h3>Newsletter</h3>
+        <p>Assine a nossa Newsletter para se manter atualizado com nossos serviços, e a programação de nossos serviços</p>
+        <hr>
+
+        <form>
+            <input type="text" name="#" id="#" placeholder="Email">
+            <button>Cadastrar</button>
+        </form>
+
+    </section>
+
 </body>
 
 </html>
