--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <section class="newsletter">
         <h3>Newsletter</h3>
-        <p>Assine a nossa Newsletter para se manter atualizado com nossos serviços, e a programação de nossos serviços</p>
+        <p>Assine a nossa Newsletter para se manter atualizado com nossos serviços, e a programação de nossos serviços e eventos culturais.</p>
         <hr>
 
         <form>
@@ -92,6 +92,15 @@
         </form>
 
     </section>
+
+    <footer>
+        <ul>
+            <li><a href=""><i class="fab fa-facebook"></i></a></li>
+            <li><a href=""><i class="fab fa-twitter"></i></a></li>
+            <li><a href=""><i class="fab fa-instagram "></i></a></li>
+        </ul>
+        <p>Todos os direitos reservados - Hotel Paraíso&copy; 2020</p>
+    </footer>
 
 </body>
 
